# open-frame

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
docs/: A11Y_SETUP.md  ACCEPTANCE_RUNS.md  ACTION_PLAN.md  ACT_MANUAL_TEST.md  ACT_SETUP.md  AGENT_ACCEPTANCE.md  AGENT_SETUP.md  API.md  ARCHITECTURE.md  CAPTURE_MANUAL_TEST.md  CONTRIBUTING.md  DECISIONS.md  FLOW_SETUP.md  MCP_BENCHMARK.md  MVP_GOALPOST.md  OCR_SETUP.md  PUBLISH_PYPI.md  README.md  V0_1_1_BACKLOG.md  V0_2_0_CHECKPOINT.md  VERIFY_SETUP.md  VISION.md
docs/acceptance-runs/: run-accept-20260615T001636Z-3.json  run-accept-20260615T001653Z-3.json  run-accept-20260615T001710Z-1.json  run-accept-20260615T001710Z-2.json  run-accept-20260615T001710Z-3.json  run-accept-20260615T001722Z-1.json  run-accept-20260615T001722Z-2.json  run-accept-20260615T001722Z-3.json  run-accept-20260615T001740Z-1.json  run-accept-20260615T001740Z-2.json  run-accept-20260615T001740Z-3.json  run-accept-20260615T001953Z-1.json  run-accept-20260615T001953Z-2.json  run-accept-20260615T001953Z-3.json  (+78 more)
scripts/: acceptance_three_runs.sh  agent_acceptance.sh  mcp_repeatability_benchmark.py  record_calibration_cast.sh
tests/: test_a11y_recognizer.py  test_actuator.py  test_agent_anthropic_provider.py  test_agent_runner.py  test_capture.py  test_cli.py  test_examples.py  test_flow.py  test_imports.py  test_mcp_adapter.py  test_recognize_debug.py  test_recognize_locator.py  test_runner.py  test_session_api.py  test_tesseract_recognizer.py  test_verify.py  test_window_state.py
(+49 files in other folders)
