[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "off-camber-open-frame"
version = "0.1.0"
description = "Open-source recognition and action for anything on a display."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Off-Camber" }]
keywords = ["automation", "desktop", "rpa", "computer-vision", "ui-testing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: MacOS",
  "Topic :: Software Development :: Testing",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Off-Camber/open-frame"
Repository = "https://github.com/Off-Camber/open-frame"
Issues = "https://github.com/Off-Camber/open-frame/issues"

[project.scripts]
open-frame = "openframe.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]
ocr = [
  "Pillow",
  "pytesseract",
]
act = [
  "pyautogui",
]
flow = [
  "PyYAML",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
